# subshape

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  Readme.md  array.test.ts  array.ts  bool.test.ts  bool.ts  common.test.ts  common.ts  compact.test.ts  compact.ts  comparable_value_union.test.ts  comparable_value_union.ts  cspell.json  deno.jsonc  dprint.json  dummy.ts  enum.test.ts  enum.ts  fixtures.rs  foo.ts  implicit_init_num_enum.test.ts  implicit_init_num_enum.ts  import_map.json  instance.test.ts  instance.ts  int.test.ts  int.ts  int_fixtures.rs  literal.ts  mod.ts  option.test.ts  option.ts  option_fixtures.rs  record.test.ts  record.ts  result.test.ts  result.ts  (+13 more)
__snapshots__/: common.test.ts.snap  foo.ts.snap
_tasks/: build_npm_pkg.ts  star.ts
array/: bench.ts  codec.ts  fixtures.rs  test.ts
bitSequence/: codec.ts  fixtures.rs  test.ts
bool/: bench.ts  codec.ts  fixtures.rs  test.ts
codecs/: array.ts  bitSequence.ts  bool.ts  collections.ts  compact.ts  constant.ts  constantPattern.ts  deferred.ts  documented.ts  dummy.ts  float.ts  hex.ts  instance.ts  int.ts  iterable.ts  lenPrefixed.ts  mod.ts  never.ts  object.ts  option.ts  optionBool.ts  partialRecord.ts  promise.ts  record.ts  result.ts  spread.ts  str.ts  transform.ts  tuple.ts  union.ts
common/: assert.ts  buffer.ts  codec.ts  metadata.ts  mod.ts  shape.ts  util.ts  visitor.ts
compact/: bench.ts  codec.ts  fixtures.rs  test.ts
constantPattern/: codec.ts  test.ts
deferred/: codec.ts  fixtures.rs  test.ts
dummy/: bench.ts  codec.ts  test.ts
examples/: arrays.eg.ts  metadata.eg.ts  (+6 more)
(+248 files in other folders)
