[package]
name = "mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "fixtures.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.56" }
parity-scale-codec = { version = "3.0.0", features = ["derive"] }
paste = { version = "1.0.6" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5" }

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'

[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z'
